--- a/force-app/main/default/lwc/alarmClockApp/alarmClockApp.css
+++ b/force-app/main/default/lwc/alarmClockApp/alarmClockApp.css
@@ -50,7 +50,7 @@ img{
     color:#243356;
 }
 
-img:hover {
+img:shake {
   /* Start the shake animation and make the animation last for 0.5 seconds */
   animation: shake 0.5s;
 
